# pybrors

./: .gitignore  Cargo.toml  README.md  pyproject.toml
docs/: index.html  pybrors.html  search.js
docs/pybrors/: dicom.html  pubmed.html  utils.html
docs/source/: conf.py  index.rst  modules.rst  pybrors.dicom.rst  pybrors.misc.rst  pybrors.pubmed.rst  pybrors.rst  pybrors.utils.rst
ext/data/dicom/: dicom_noserial_file.dcm  dicom_sbi_file_ec.dcm  dicom_sbi_file_mu0.dcm  dicom_sbi_file_muinf.dcm
ext/data/dicom/dicom_exam/CT/FatFraction/: CT_SBI_00001.dcm  CT_SBI_00002.dcm  CT_SBI_00003.dcm  CT_SBI_00004.dcm  CT_SBI_00005.dcm  CT_SBI_00006.dcm  CT_SBI_00007.dcm  CT_SBI_00008.dcm  CT_SBI_00009.dcm  CT_SBI_00010.dcm  CT_SBI_00011.dcm  CT_SBI_00012.dcm  CT_SBI_00013.dcm  CT_SBI_00014.dcm  CT_SBI_00015.dcm  CT_SBI_00016.dcm  CT_SBI_00017.dcm  CT_SBI_00018.dcm  CT_SBI_00019.dcm  CT_SBI_00020.dcm  CT_SBI_00021.dcm  CT_SBI_00022.dcm  CT_SBI_00023.dcm  CT_SBI_00024.dcm  CT_SBI_00025.dcm  CT_SBI_00026.dcm  CT_SBI_00027.dcm  CT_SBI_00028.dcm  CT_SBI_00029.dcm  (+343 more)
ext/data/pubmed/: pubmed_bibliography.xlsx  references_cyteval.pubmed  references_millet.pubmed  references_taourel.pubmed
ext/notebooks/: dicom.ipynb  misc.ipynb  pubmed.ipynb
python/pybrors/: __init__.py
python/pybrors/dicom/: __init__.py  data.py  files.py  sbi.py
python/pybrors/misc/: __init__.py  qrcode.py
python/pybrors/pubmed/: __init__.py  data.py  files.py  pubmed.py  visualization.py
python/pybrors/utils/: __init__.py  files.py  plotdata.py
src/: lib.rs
tests/: test_dicom.py  test_pubmed.py
(+1833 files in other folders)
