[package]
name = "pybrors"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pybrors"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
rayon = "1.8.0"
num = "0.4.1"
evalexpr = "11.1.0"
gethostname = "0.4.3"
dicom = "0.6.1"
